# cookiecutter-spatial-data-science

./: .bumpversion.cfg  .gitignore  404.html  LICENSE  Makefile  README.md  VERSION  cookiecutter.json  environment.yml  index.html  make.bat  mkdocs.yml  requirements.txt  sitemap.xml
{{cookiecutter.project_name}}/: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  config_template.ini  env  environment.yml  environment_dev.yml  environment_dev_nix.yml  make.bat  make.cmd  pyproject.toml  run.cmd  setup.py  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: make-docs.yml
{{cookiecutter.project_name}}/arcgis/: GeoAI-Tools.AddGroupToGis.pyt.xml  GeoAI-Tools.CreateAoiMask.pyt.xml  GeoAI-Tools.CreateDataResources.pyt.xml  GeoAI-Tools.PublishFeatureLayer.pyt.xml  GeoAI-Tools.pyt  GeoAI-Tools.pyt.xml  README.md  SDS-Tools.CreateAoiMask.pyt.xml  SDS-Tools.CreateDataResources.pyt.xml  SDS-Tools.pyt  SDS-Tools.pyt.xml  cookiecutter.aprx  cookiecutter.tbx  {{cookiecutter.support_library}}.pyt
{{cookiecutter.project_name}}/arcgis/cookiecutter.gdb/: a00000004.FDO_UUID.atx  a00000004.gdbtable  a00000005.CatItemTypesByName.atx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtable  (+9 more)
{{cookiecutter.project_name}}/conda-recipe/: meta.yaml
{{cookiecutter.project_name}}/config/: config.ini  secrets_template.ini
{{cookiecutter.project_name}}/docs/: getting-started.rst
{{cookiecutter.project_name}}/docsrc/: conf.py  index.rst  make.bat
{{cookiecutter.project_name}}/notebooks/: data_processing_template.ipynb  notebook-template.ipynb  notebook_template.ipynb
{{cookiecutter.project_name}}/scripts/: azure_blob.py  config.ini  make_data.py  make_kernel.sh  make_pyt_archive.py
{{cookiecutter.project_name}}/src/: environment_dev.yml  make_data.py
{{cookiecutter.project_name}}/test/: test_{{cookiecutter.support_library}}.py
{{cookiecutter.project_name}}/testing/: test_{{cookiecutter.support_library}}.py
(+69 files in other folders)
